# bookwarms-backend

./: README.md  pyproject.toml
authors/: models.py  serializers.py
authors/migrations/: 0001_initial.py  0002_author_author_intro_alter_author_author_award_and_more.py  0003_alter_author_author_award_alter_author_author_career_and_more.py
books/: models.py  serializers.py  urls.py  views.py
books/migrations/: 0001_initial.py
bookshelfs/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
bookshelfs/migrations/: 0001_initial.py
carts/: admin.py  models.py  serializers.py  urls.py  views.py
carts/migrations/: 0001_initial.py
categories/: models.py  serializers.py  urls.py  views.py
categories/migrations/: 0001_initial.py
config/: settings.py  urls.py
orders/: models.py  urls.py  views.py
orders/migrations/: 0001_initial.py
reviews/: models.py  serializers.py  urls.py  views.py
reviews/migrations/: 0001_initial.py
trades/: admin.py  models.py  serializers.py  urls.py  views.py
trades/migrations/: 0001_initial.py  0002_trade_trade_date_alter_purchase_purchase_price_and_more.py
users/: admin.py  models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_options_alter_user_managers_and_more.py
wishes/: admin.py  models.py
wishes/migrations/: 0001_initial.py
